# opencl_cook

./: CMakeLists.txt  README.md
array_add/: add.cl  array_add.cpp
profile/: cpu_profile.cpp  gpu_profile.cpp
